feat: Refactor project type detection with configuration class  - Replaced static file-to-project mapping with a Spring configuration class - Introduced a configurable Map for project type mappings (e.g., Python, Node.js, Go, Java) - Simplified `ProjectAnalyzerService` to inject mappings via Spring - Enhanced flexibility by allowing easy additions and modifications of file-to-project type mappings - Removed dependency on external properties files for project type configuration